2011-08-17  Dirk Eddelbuettel  <edd@debian.org>

	* inst/doc/Rcpp-FAQ/Rcpp-FAQ.Rnw: Added a short section including an
	example on the issue raised by Murray wherein 64 bit 'long' integer
	types can be cast with loss to numeric types without error or warning.

2011-07-28  Dirk Eddelbuettel  <edd@debian.org>

	* inst/unitTests/runit.Function.R: new unit test for accessing a
	non-exported function from a namespace

2011-07-26  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION: Release 0.9.6
        * inst/NEWS: Release 0.9.6
        * inst/include/Rcpp/config.h: Release 0.9.6
        * debian/*: Similarly updated for new release to Debian

2011-07-24  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/Fibonacci/fib.r: New example showing how to compute a
	Fibonacci sequence using Rcpp and compare it to R and byte-compiled R

2011-07-14  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/RcppGibbs/RcppGibbs.R: New example RcppGibbs,
	extending Sanjog Misra's Rcpp illustration of Darren Wilkinson's
	comparison of MCMC Gibbs Sampler implementations;
	* inst/examples/RcppGibbs/timeRNGs.R: added short timing on Normal
	and Gaussian RNG draws between Rcpp and GSL as R's rgamma() is seen
	to be significantly slower

2011-07-13  Romain Francois  <romain@r-enthusiasts.com>

	* inst/include/Rcpp/traits/is_eigen_base.h: helper traits to
	facilitate implementation of the RcppEigen package. The is_eigen_base
	traits identifies if a class derives from EigenBase using SFINAE

	* inst/include/Rcpp/internal/wrap.h: new layer of dispatch to help
	RcppEigen

2011-07-07  Romain Francois  <romain@r-enthusiasts.com>

	* inst/include/Rcpp/XPtr.h: The XPtr class template gains a second
	template parameter allowing the developper to supply his/her own
	finalizer instead of the default one that calls delete

2011-07-05  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION: Release 0.9.5
        * inst/NEWS: Release 0.9.5
        * inst/include/Rcpp/config.h: Release 0.9.5